<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_by"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_header"
                android:title="@string/sort_by_header"
                android:enabled="false"
                android:clickable="false" />
            <item
                android:id="@+id/action_sort_by_due_date"
                android:title="@string/sort_by_due_date" />
            <item
                android:id="@+id/action_sort_by_priority"
                android:title="@string/sort_by_priority" />
            <item
                android:id="@+id/action_sort_by_alphabetically"
                android:title="@string/sort_by_alphabetically" />
        </menu>
    </item>
</menu>